<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/name_box"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:accessibilityHeading="false"
        android:autofillHints="name"
        android:ems="10"
        android:gravity="center"
        android:inputType="text|textPersonName"
        android:text="@string/enter_name" />

    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text|textEmailAddress"
        android:text="@string/enter_email" />

    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/enter_password" />

    <EditText
        android:id="@+id/password_again_box"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/enter_password_again" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        android:backgroundTint="#FF5722"
        android:textColor="@android:color/white"
        tools:text="@string/register" />

</LinearLayout>